--- a/maps-app/index.html
+++ b/maps-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <body>
     <div id="map" style="height: 500px"></div>
-
+    <!-- This Google Maps API key is restricted -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVqL9KzXQgw4kKpV4jTg4q0oy0YuI-o_k"></script>
     <script src="./src/index.ts"></script>
   </body>
